# flatbuffers-playground

./: conanfile.py
src/: CMakeLists.txt  CurrentDateTimeTest.cpp  current_date_time.fbs
